json files, md files

--- a/assets/data/TITLE1_unknown.json
+++ b/assets/data/TITLE1_unknown.json
@@ -1,6 +1,145 @@
 {
  "items": [
   {
+    "id": "KA6pwrtMQx2bOgtrNa8e7g",
+    "url": "http://jobmote.com/jobs/16960-netsuite-consultant-partner-remote-work",
+    "title": "NetSuite Consultant - Partner - Remote Work",
+    "tags": [
+      "DBG:surround``remot 3N ( OR(employe,develop,engin,team,role,employment,workmat) OR compani OR worldwide)",
+      "DBG_TECH1:k/t/w:computer-vision/bigdata-ml/16",
+      "DBG_TECH1:techWeightMap:{python=0, other=0, dotnet=0, c=0, mobile=0, go=0, nodejs=0, bigdata-ml=16, ruby=0, apple=0, java=0, gamedev=0, php=0, embedded=0, frontend=0}",
+      "REMOTE1/100",
+      "TECH1/bigdata-ml",
+      "TITLE1/unknown",
+      "TZ/unknown"
+    ],
+    "tagsNames1": [
+      "undefined job title"
+    ],
+    "tagsNames2": [
+      "bigdata-ml"
+    ],
+    "hiringOrganization": {
+      "name": "UNSET",
+      "sameAs": "UNSET"
+    },
+    "salary": {
+      "currency": "UNSET",
+      "minValue": 0,
+      "maxValue": 0,
+      "info": "",
+      "unit": "UNSET",
+      "isEquity": false
+    },
+    "employmentType": "UNSET",
+    "published": "Jul 13, 2018 9:21:40 AM",
+    "validThrough": "Jan 1, 1970 3:00:00 AM",
+    "content": "<div><div><div></div></div><div><div><div><p>ERP Consultant (NetSuite)<br>Remote<br>£60,000 </p><p>The Company: </p><p>One of the most up and coming Partners within the NetSuite channel, delivering high profile, quality solutions to some of the biggest users within the UK. My client has been delivering recognised solutions a number of years and as such have won awards for the work they do delivering Netsuite solutions. The company can offer unmatched training with the Netsuite platform with true industry experts at hand to support your training and development. </p><p>The Role: </p><p>As an ERP Consultant, you will work within the NetSuite team liaising with key clients within the channel and running Netsuite implementations and upgrades. There will be support from the whole team who specifically work on NetSuite to up skill you if you don't already have Netsuite based experience. I would be looking for an ERP background (Sage 200, 500, 1000, Sap B1 and Infor as examples) and aptitude as this is what you need you need to cross train effectively and will enable you to build a prosperous and progressive career. </p><p>What they're looking for; </p><p>• Hands-on experience working with NetSuite or similar ERP/Finance solution </p><ul><li> Background of working within Support/Analyst roles or working within a finance team<br></li><li> Accountancy qualification, A Level, AAT or similar<br></li><li> Strong verbal and written communication skills<br></li><li> Ability to work in a fast paced environment and to strict deadlines<br></li><li> Enthusiastic about your work<br></li><li> Strong SQL Skills<br></li></ul><p>Some of the responsibilities;<br>* Full End-End ERP implementations<br>* Providing effective 1st and 2nd line support to a large number of NetSuite users<br>* Assisting with future software implementations and upgrades<br>* Reviewing and updating existing NetSuite system documentation<br>* Maintaining professional relationships with customers and clients </p><p>Apply today: </p><p>To apply, simply submit your CV today; . This is an urgent role and will be filled quickly. </p><p>To discuss this opportunity further in complete confidence then please send your CV </p><p>Anderson Frank International is the leading ERP recruitment firm in the UK advertising more ERP/NetSuite roles any other agency. We deal with both NetSuite partners &amp; End Users throughout the UK and Europe and we have never had more live requirements for NetSuite professionals. By specializing solely in placing candidates in the ERP market we have built relationships with most of the key employers in the UK and have an unrivalled understanding of where the best opportunities and ERP jobs are. </p><p>Anderson Frank International Ltd is acting as an Employment Agency in relation to this vacancy </p></div></div><div></div></div></div>"
+  },
+  {
+    "id": "9_Z-FNEcSrGW4E2YKEjEtA",
+    "url": "https://remoteok.io/jobs/68029",
+    "title": "Human Resources Coordinator",
+    "tags": [
+      "DBG:surround``remot 3N ( OR(employe,develop,engin,team,role,employment,workmat) OR compani OR worldwide)",
+      "REMOTE1/100",
+      "TECH1/unknown",
+      "TITLE1/unknown",
+      "TZ/unknown"
+    ],
+    "tagsNames1": [
+      "undefined job title"
+    ],
+    "tagsNames2": [
+      "unknown"
+    ],
+    "hiringOrganization": {
+      "name": "UNSET",
+      "sameAs": "UNSET"
+    },
+    "salary": {
+      "currency": "UNSET",
+      "minValue": 0,
+      "maxValue": 0,
+      "info": "",
+      "unit": "UNSET",
+      "isEquity": false
+    },
+    "employmentType": "UNSET",
+    "published": "Jul 13, 2018 4:27:48 AM",
+    "validThrough": "Jan 1, 1970 3:00:00 AM",
+    "content": "<td><span><h2>Human Resources Coordinator</h2></span><br><span><h3>Empire Flippers</h3></span> <span>verified</span></td><div><div>We are looking to bring on an HR Coordinator to join our team in Saigon, Vietnam on September 12, 2018, where you’ll start your training during our quarterly meetup.<br>Our company has grown significantly in the last year. You only need to look at our public quarterly reports to see the massive growth our company has achieved. We’ve been on the Inc. 5000 list of fastest growing American companies twice now! In 2016, we came in at 161, and last year, we came in at 172.<br>And we’re just getting started!<br>You will play a pivotal role in helping us grow, organize and vet future hires for the company. As the HR Coordinator you will be performing background checks on our potential employees, review and revise our hiring emails, update and maintain our career boards and other tasks associated with hiring new talent for the company.<br>You will spend the first 4-6 months with us in SE Asia training with our management team. This position has the potential to become location-independent once your training is done and you can expect some travel. (SE Asia, Europe, US, etc.) You will be in a probationary period for the first six months, and afterwards we’ll have you up and running as an HR Coordinator.<br>You should either be a digital nomad or interested in the digital nomad lifestyle. This is very important for this role, since our entire company is remote and our people are regularly on the move. We would need you to be knowledgeable about the unique challenges that comes with managing such a remote team so you can best serve them.<br>Ideally, we would want you to be based primarily out of SE Asia since so much of our team tends to live in this part of the world. This would allow you to meet face to face with the team fairly regularly and also travel to several events we do around the region every year.<p>See more jobs at <span>Empire Flippers</span></p><p>Visit <a href='https://empireflippers.com/' rel='nofollow'>Empire Flippers</a>'s website</p></div></div>"
+  },
+  {
+    "id": "X9LfK6ujSM-VYw3TfVlscA",
+    "url": "https://weworkremotely.com/remote-jobs/empire-flippers-human-resources-coordinator",
+    "title": "Empire Flippers: Human Resources Coordinator",
+    "tags": [
+      "DBG:surround``headquart 3N remot",
+      "DBG:surround``remot 3N ( OR(employe,develop,engin,team,role,employment,workmat) OR compani OR worldwide)",
+      "REMOTE1/100",
+      "TECH1/unknown",
+      "TITLE1/unknown",
+      "TZ/unknown"
+    ],
+    "tagsNames1": [
+      "undefined job title"
+    ],
+    "tagsNames2": [
+      "unknown"
+    ],
+    "hiringOrganization": {
+      "name": "UNSET",
+      "sameAs": "UNSET"
+    },
+    "salary": {
+      "currency": "UNSET",
+      "minValue": 0,
+      "maxValue": 0,
+      "info": "",
+      "unit": "UNSET",
+      "isEquity": false
+    },
+    "employmentType": "UNSET",
+    "published": "Jul 12, 2018 10:17:42 PM",
+    "validThrough": "Jan 1, 1970 3:00:00 AM",
+    "content": "<h2>Human Resources Coordinator </h2><span>Company: Empire Flippers<br></span><span>Headquarters: Wilmington, DE (Remote Job)<br></span><span>https://empireflippers.com/career/hr-coordinator/<br><br></span>  <div>    <div>We are looking to bring on an HR Coordinator to join our team in Saigon, Vietnam on September 12, 2018, where you’ll start your training during our quarterly meetup.</div><div><br></div><div>Our company has grown significantly in the last year. You only need to look at our public quarterly reports to see the massive growth our company has achieved. We’ve been on the Inc. 5000 list of fastest growing American companies twice now! In 2016, we came in at 161, and last year, we came in at 172.</div><div><br></div><div>And we’re just getting started!</div><div><br></div><div>You will play a pivotal role in helping us grow, organize and vet future hires for the company. As the HR Coordinator you will be performing background checks on our potential employees, review and revise our hiring emails, update and maintain our career boards and other tasks associated with hiring new talent for the company.</div><div><br></div><div>You will spend the first 4-6 months with us in SE Asia training with our management team. This position has the potential to become location-independent once your training is done and you can expect some travel. (SE Asia, Europe, US, etc.) You will be in a probationary period for the first six months, and afterwards we’ll have you up and running as an HR Coordinator.</div><div><br></div><div>You should either be a digital nomad or interested in the digital nomad lifestyle. This is very important for this role, since our entire company is remote and our people are regularly on the move. We would need you to be knowledgeable about the unique challenges that comes with managing such a remote team so you can best serve them.</div><div><br></div><div>Ideally, we would want you to be based primarily out of SE Asia since so much of our team tends to live in this part of the world. This would allow you to meet face to face with the team fairly regularly and also travel to several events we do around the region every year.</div>  </div>  <div>    <h4>Apply for this position</h4>    <p>More info &amp; apply at: <a href='https://empireflippers.com/career/hr-coordinator/' rel='nofollow'>https://empireflippers.com/career/hr-coordinator/</a></p>  </div>"
+  },
+  {
+    "id": "jtNwzzpnR-SC1tqWInZXlQ",
+    "url": "https://remote.co/job/cancer-registrar/",
+    "title": "Cancer Registrar",
+    "tags": [
+      "DBG:surround``3N(locat,remot)",
+      "REMOTE1/100",
+      "TECH1/unknown",
+      "TITLE1/unknown",
+      "TZ/unknown"
+    ],
+    "tagsNames1": [
+      "undefined job title"
+    ],
+    "tagsNames2": [
+      "unknown"
+    ],
+    "hiringOrganization": {
+      "name": "UNSET",
+      "sameAs": "UNSET"
+    },
+    "salary": {
+      "currency": "UNSET",
+      "minValue": 0,
+      "maxValue": 0,
+      "info": "",
+      "unit": "UNSET",
+      "isEquity": false
+    },
+    "employmentType": "UNSET",
+    "published": "Jul 12, 2018 6:42:20 PM",
+    "validThrough": "Jan 1, 1970 3:00:00 AM",
+    "content": "<h2>Cancer Registrar at <span>Augusta University Health</span></h2><div><span><i></i> Remote</span>        </div><div>            <p><strong>Work Location: </strong>Satellite Location</p><p><strong>Req Number:&nbsp;</strong>16042</p><p><strong>Department Name:&nbsp;</strong>5402 Registry Services</p><p><strong>Shift:&nbsp;</strong>Day</p><p><strong>Position Status: </strong>Full Time</p><p><strong>Employment Status:&nbsp;</strong>Regular</p><p><strong>Position Description</strong></p><ul><li>The primary responsibility of the cancer registrar is to ensure that timely, accurate and complete cancer data is collected and maintained on all types of cancer diagnosed and /or treated within the medical instituition. Information is entered into a computer database manually or through database linages and computer interfaces. *<strong>*Remote work arrangement may be possible with this position</strong>**</li></ul><p><strong>Position Requirements</strong></p><ul><li>Associate’s degree&nbsp;in Cancer Registry Management (CRM), Cancer Information Management (CIM) from an NCRA accredited Program or Associate’s degree in healthcare-related field.</li><li>Previous cancer registry experience.</li><li>Experience with electronic medical records.</li><li>Basic computer skills, including office productivity applications (e-mail, word processing, spreadsheet) and data entry.</li><li>Excellent organizational skills and attention to detail.</li><li>Ability to work independently, requiring minimal supervision.</li><li>Strong interpersonal skills.</li><li>Analytic skills.</li></ul><p><strong>Preferred Requirements</strong></p><ul><li>Experince in the healthcare field in some capacity. Associate’s degree in healthcare related field. Previous cancer registry experience. CTR credential.</li></ul><p>We are an Equal Opportunity Employer and do not discriminate against any employee or applicant for employment because of race, color, sex, age, national origin, religion, sexual orientation, gender identity, status as a veteran, and basis of disability or any other federal, state or local protected class.</p>        </div><div>        <a href='https://careers.peopleclick.com/careerscp/client_mcghealth/external/jobDetails.do?functionName=getJobDetail&amp;jobPostId=40698&amp;localeCode=en-us' rel='nofollow'>Apply for job</a>    </div>"
+  },
+  {
     "id": "yT10SIGsSRCQcEkZUHIRew",
     "url": "https://stackoverflow.com/jobs/196598/etcherio-open-source-maintainer-resinio?a=13VPXsNWokPm",
     "title": "Etcher.io Open-source Maintainer at Resin.io  ",
