json files, md files

--- a/assets/data/TITLE1_unknown.json
+++ b/assets/data/TITLE1_unknown.json
@@ -1,6 +1,48 @@
 {
  "items": [
   {
+    "id": "gGLN0PNoRZO_sbaCsrKSDQ",
+    "url": "https://jobspresso.co/job/javascript-development-instructor/",
+    "title": "JavaScript Development Instructor",
+    "tags": [
+      "DBG:surround``2N(remot, posit)",
+      "DBG:surround``OR(eastern, east, est, edt, newyork) 3W OR(time,timezon)",
+      "DBG:surround``OR(locat, anywher, base, resid) 7W usa",
+      "DBG:surround``OR(work,countri,locat,contract,base,you W can) 2W anywher",
+      "DBG_TECH1:k/t/w:assembly/c/5",
+      "DBG_TECH1:k/t/w:javascript/frontend/2",
+      "DBG_TECH1:k/t/w:javascript/nodejs/2",
+      "DBG_TECH1:techWeightMap:{python=0, other=0, dotnet=0, c=5, mobile=0, go=0, nodejs=2, bigdata-ml=0, ruby=0, apple=0, java=0, gamedev=0, php=0, embedded=0, frontend=2}",
+      "REMOTE1/100",
+      "TECH1/c",
+      "TITLE1/unknown",
+      "TZ/America/East"
+    ],
+    "tagsNames1": [
+      "US East time zone",
+      "undefined job title"
+    ],
+    "tagsNames2": [
+      "c"
+    ],
+    "hiringOrganization": {
+      "name": "UNSET",
+      "sameAs": "UNSET"
+    },
+    "salary": {
+      "currency": "UNSET",
+      "minValue": 0,
+      "maxValue": 0,
+      "info": "",
+      "unit": "UNSET",
+      "isEquity": false
+    },
+    "employmentType": "UNSET",
+    "published": "Jul 14, 2018 6:55:46 AM",
+    "validThrough": "Jan 1, 1970 3:00:00 AM",
+    "content": "<h2> JavaScript Development Instructor</h2><div>Developer<br></div><div>Anywhere in US<br></div><div>Company: General Assembly<br></div><div>Part Time<br></div><h3>Overview</h3><p>Since 2011, General Assembly has transformed tens of thousands of careers through pioneering, experiential education in today’s most in-demand skills. As featured in The Economist, Wired, and The New York Times, GA offers training in web development, data, design, business, and more, both online and at campuses around the world. Our global professional community boasts 40,000 full- and part-time alumni — and counting.</p><p>In addition to fostering career growth for individuals, GA helps employers cultivate top tech talent and spur innovation by transforming their teams through strategic learning. More than 21,000 employees at elite companies worldwide have honed their digital fluency with our corporate training programs. GA has also been recognized as one of Deloitte’s Technology Fast 500, and Fast Company has dubbed us leaders in World-Changing Ideas and the #1 Most Innovative Company in Education.</p><p>In this 10-week part-time course, students learn and practice turning messy real-world datasets into actionable, data-driven insights they can communicate. We will be using Excel, SQL and Tableau as the primary tools for analysis. We are looking for an instructor to lead this part-time Remote Analytics course (see&nbsp;).</p><a href='https://generalassemb.ly/education/analytics' rel='nofollow'>course page</a><p></p><strong>This is a remote teaching position, so applicants can be located anywhere in the US!</strong><p></p><strong>SKILLS AND QUALIFICATIONS</strong><ul></ul><li>You have strong experience using the following tools: Excel, SQL and Tableau.</li><li>You are eager to shape the skills, minds, and trajectories of eager General Assembly students.</li><li>You are the person that your colleagues naturally gravitate to when they are trying to figure something out.</li><li>You haveof work experience in a role where you’ve been responsible for cleaning messy data, analyzing the data and presenting your data based insights.</li><strong>&nbsp;at least 5 years&nbsp;</strong><li>Preferred, but not required:</li><ul></ul><li>Experience working in a remote environment, and use of requisite tools (i.e. video conferencing, messaging, etc.)</li><li>Backgrounds in adult learning, pedagogy and curriculum development</li><li>Background in workshop facilitation and professional development</li><p></p><strong>ESSENTIAL RESPONSIBILITIES AND DUTIES</strong><ul></ul><li>Teach 2 hours per evening, 2 days a week, for 10 weeks.</li><li>Commit a few hours per week to office hours and ddapt pre-built GA curriculum and lesson-plans to reflect industry trends and offer personal insights</li><li>Work alongside GA staff and teaching team to best meet the needs and learning styles of your students.</li><li>Guide students through development of a stellar final project that will showcase their abilities to hiring managers.</li><li>Facilitate a dynamic and collaborative classroom community.</li><li>Inspire students to persevere through the challenges of learning a new suite of skills</li><li>Assist students outside of class as necessary.</li><p></p><strong>General Assembly is a licensed school in all states that we operate in, and some states require instructors to be licensed to teach. If hired, you will be required to submit and be approved as an instructor in relevant states. Directions for becoming licensed will be shared with you during onboarding. Licensure requirements vary by state, but you may be required to provide academic transcripts and to answer questions pertaining to moral character, professional conduct, education, and work history. General Assembly will pay for all licensing fees.</strong><p></p><strong>Competencies:</strong><ul></ul><li>Technical Expertise – Technical Skills</li><li>People Management &nbsp;– Directing, Motivating, and Directing Others &amp; Managing Diversity</li><li>Instructional Expertise – Planning, Presentation Skills, Patience, Time Management, Listening Skills</li><li>Self-development – Self-Knowledge, Learning on the Fly, Personal Learning</li><div> <div><div><p>To apply for this job please visit the following URL: <a href='https://boards.greenhouse.io/generalassembly/jobs/1145220' rel='nofollow'>https://boards.greenhouse.io/generalassembly/jobs/1145220 →</a></p></div></div></div>"
+  },
+  {
     "id": "KA6pwrtMQx2bOgtrNa8e7g",
     "url": "http://jobmote.com/jobs/16960-netsuite-consultant-partner-remote-work",
     "title": "NetSuite Consultant - Partner - Remote Work",
@@ -4844,86 +4886,6 @@
     "published": "May 20, 2018 6:04:45 PM",
     "validThrough": "Jan 1, 1970 3:00:00 AM",
     "content": "<div><h2>Freelance Hunter and Gatherer at Octonius</h2><div>Europe, France, Spain, Remote · Contract</div><div></div></div><div><div>Skills</div><div>Business Development, Sales, Sales/Marketing and Strategic Partnerships</div><div>Compensation</div><div>$10K–$50K<br>1.0%–2.0%</div><div>Visa Sponsorship</div><div>Not available</div></div><h3>Job Description</h3><div><p>We’re in search of a Freelance Hunter and Gatherer to join our young and creative team and help us reach a new level of revenue growth for the company. You'll be working closely with our Director of Sales. </p><p>You'll lead outbound sales campaigns, research new market segments, propose improvements, report sales metrics and develop leads across relevant markets. Measure sales metrics, adapt, propose solutions and propose ways to improve business and marketing strategy to generate new customers.</p><p>We offer:</p><p>- Ability to work remote.<br>- Great commission/compensation for each closed deal. <br>- Equity incentives for top performers.<br>- Freedom to create your own job. <br>- Successful candidates have an outlook to be contracted full-time in January 2018.</p><p>The ideal candidate:</p><p>- Passionate about sales and business development. <br>- Self-starter.<br>- Deal closer. <br>- Creative ideas for partnerships and B2B sales. <br>- Strong communication skills. <br>- Powerpoint / Keynote &amp; proficient in Google Drive.<br>- Highly enthusiastic, confident and interested in SaaS sales.</p></div>"
-  },
-  {
-    "id": "_ARWRQxcRYKdp8vRwwtZ7g",
-    "url": "https://angel.co/forkable/jobs/129544-city-launcher",
-    "title": "City Launcher",
-    "tags": [
-      "Attorney",
-      "DBG:surround``fulltim 4N remot",
-      "Finance/Accounting",
-      "Full Time",
-      "Operations",
-      "REMOTE1/100",
-      "Remote OK",
-      "San Francisco",
-      "TECH1/unknown",
-      "TITLE1/unknown",
-      "TZ/unknown"
-    ],
-    "tagsNames1": [
-      "undefined job title"
-    ],
-    "tagsNames2": [
-      "unknown"
-    ],
-    "hiringOrganization": {
-      "name": "UNSET",
-      "sameAs": "UNSET"
-    },
-    "salary": {
-      "currency": "USD",
-      "minValue": 0,
-      "maxValue": 0,
-      "info": "",
-      "unit": "DAY",
-      "isEquity": false
-    },
-    "employmentType": "UNSET",
-    "published": "May 14, 2018 10:15:44 PM",
-    "validThrough": "Jan 1, 1970 3:00:00 AM",
-    "content": "<div><h2>City Launcher at Forkable</h2><div>San Francisco, Remote · Full Time</div></div><div><div>Compensation</div><div>$40K–$80K<br>0.0%–1.5%</div><div>Visa Sponsorship</div><div>Not available</div></div><h3>Job Description</h3><div><p>Help us bring Forkable to the world! Being a city launcher is like being a serial entrepreneur. You need to be very versatile, with lots of grit, attention to detail, initiative, and resourcefulness. And you should definitely like to travel!</p></div>"
-  },
-  {
-    "id": "V1l0gN_BQKGd8R1qBhJMvA",
-    "url": "https://angel.co/forkable/jobs/129546-city-launcher",
-    "title": "City Launcher",
-    "tags": [
-      "Attorney",
-      "DBG:surround``fulltim 4N remot",
-      "Full Time",
-      "New York City",
-      "Operations",
-      "REMOTE1/100",
-      "Remote OK",
-      "TECH1/unknown",
-      "TITLE1/unknown",
-      "TZ/unknown",
-      "User Researcher"
-    ],
-    "tagsNames1": [
-      "undefined job title"
-    ],
-    "tagsNames2": [
-      "unknown"
-    ],
-    "hiringOrganization": {
-      "name": "UNSET",
-      "sameAs": "UNSET"
-    },
-    "salary": {
-      "currency": "USD",
-      "minValue": 0,
-      "maxValue": 0,
-      "info": "",
-      "unit": "DAY",
-      "isEquity": false
-    },
-    "employmentType": "UNSET",
-    "published": "May 14, 2018 10:15:44 PM",
-    "validThrough": "Jan 1, 1970 3:00:00 AM",
-    "content": "<div><h2>City Launcher at Forkable</h2><div>New York City, Remote · Full Time</div></div><div><div>Compensation</div><div>$40K–$80K<br>0.0%–1.5%</div><div>Visa Sponsorship</div><div>Not available</div></div><h3>Job Description</h3><div><p>Help us bring Forkable to the world! Being a city launcher is like being a serial entrepreneur. You need to be very versatile, with lots of grit, attention to detail, initiative, and resourcefulness. And you should definitely like to travel!</p></div>"
   }
 ]
 }
