json files, md files

--- a/assets/data/TECH1_apple.json
+++ b/assets/data/TECH1_apple.json
@@ -1,6 +1,59 @@
 {
  "items": [
   {
+    "id": "YwUzfxfeSI6DIjR34FDG_A",
+    "url": "https://whereverjobs.com/listing/3529/ios-developer",
+    "title": "iOS Developer",
+    "tags": [
+      "DBG:surround``2W( OR(100,fulli,entir), remot)",
+      "DBG:surround``remot 3N ( OR(employe,develop,engin,team,role,employment,workmat) OR compani OR worldwide)",
+      "DBG_TECH1:k/t/w:css/frontend/3",
+      "DBG_TECH1:k/t/w:go/go/3",
+      "DBG_TECH1:k/t/w:ios/apple/6",
+      "DBG_TECH1:k/t/w:ios/mobile/6",
+      "DBG_TECH1:k/t/w:java/java/2",
+      "DBG_TECH1:k/t/w:java/mobile/1",
+      "DBG_TECH1:k/t/w:javascript/frontend/1",
+      "DBG_TECH1:k/t/w:javascript/nodejs/1",
+      "DBG_TECH1:k/t/w:node.js/nodejs/13",
+      "DBG_TECH1:k/t/w:objective-c/apple/3",
+      "DBG_TECH1:k/t/w:objective-c/c/2",
+      "DBG_TECH1:k/t/w:objective-c/mobile/8",
+      "DBG_TECH1:k/t/w:php/php/5",
+      "DBG_TECH1:k/t/w:swift/apple/5",
+      "DBG_TECH1:k/t/w:swift/mobile/8",
+      "DBG_TECH1:k/t/w:xcode/apple/8",
+      "DBG_TECH1:k/t/w:xcode/mobile/8",
+      "DBG_TECH1:techWeightMap:{python=0, other=0, dotnet=0, c=2, mobile=31, go=3, nodejs=14, bigdata-ml=0, ruby=0, apple=22, java=2, gamedev=0, php=5, embedded=0, frontend=4}",
+      "REMOTE1/100",
+      "TECH1/apple",
+      "TECH1/mobile",
+      "TITLE1/dev",
+      "TZ/unknown"
+    ],
+    "tagsNames1": [],
+    "tagsNames2": [
+      "apple",
+      "mobile"
+    ],
+    "hiringOrganization": {
+      "name": "UNSET",
+      "sameAs": "UNSET"
+    },
+    "salary": {
+      "currency": "UNSET",
+      "minValue": 0,
+      "maxValue": 0,
+      "info": "",
+      "unit": "UNSET",
+      "isEquity": false
+    },
+    "employmentType": "UNSET",
+    "published": "Jul 15, 2018 5:02:09 AM",
+    "validThrough": "Jan 1, 1970 3:00:00 AM",
+    "content": "<h3>iOS Developer</h3><div>Company: X-Team<br><br></div><div>                                <div><b>About X-Team</b></div><div><br></div><div>X-Team is an international company founded in Melbourne, Australia, that helps companies scale their development teams by providing them with extraordinary teams of developers from around the world.</div><div><br></div><div><b>We are 100% remote and believe in building a world where developers can have access to an environment of growth and incredible opportunities regardless of where they live.</b></div><div><br></div><div>We are also a community of people dedicated to unleashing our potential. We’ve fostered a unique, active lifestyle and culture around this idea that continues to attract thousands of developers to apply every day.</div><div><br></div><div>We proactively support our developers, fund their learning and growth, connect them in roaming hacker housesaround the world, and give them a remote environment that motivates and inspires them on a daily basis. While other companies merely place and drop their talent, we provide unified teams of developers centered around the same beliefs, values, and lifestyle.&nbsp;</div><div><br></div><div>We're uniquely situated to help shape how companies grow their businesses in the digital age and aid them in being able to do so properly with the right people. We work with big brands like Riot Games, Fox Broadcasting, Kaplan Inc., Coinbase, Google, Twitter and more…</div><div><br></div><div><b>About You:</b></div><ul><li>3+ years of experience in mobile iOS Development<br></li><li>Experience with Objective-C, CSS, Javascript, HTML<br></li><li>Experience with JSON, XML, SOAP, REST<br></li><li>Experience with server side technologies (Java, NodeJS, PHP)<br></li><li>Experience storing and indexing data<br></li><li>Knowledge of Swift and Xcode a plus<br></li><li>Code optimization and performance improvements<br></li><li>Write well designed, testable, efficient code</li></ul><div><br></div><div><b>Nice to have:</b></div><ul><li>Experience with working remotely<br></li><li>Familiar/involved with open­ source projects</li></ul><div><br></div><div><b>Personal:</b></div><ul><li>Independent, self-motivated<br></li><li>Fluent in English, written and spoken<br></li><li>Proven track record of always learning and growing<br></li><li>Proactive attitude<br></li><li>Possess a spirit of generosity</li></ul><div><br></div><div><b>Perks:</b></div><ul><li>Get the chance to work with big brands like Riot Games, Fox, Kaplan, Coinbase..&nbsp;<br></li><li>Live and work in one of our roaming hacker houses (X-Outposts) around the world.<br></li><li>Work from anywhere as part of a community of digital nomads.<br></li><li>Join our vibrant community, filled with opportunities to learn new skills together in study groups, join clubs (photography, gaming, etc.) and get free camera equipment/games/conferences/courses/massages/etc., charitable fundraisers, fitness &amp; yoga programs (+gym membership), etc. This is the community to be in if you're a remote developer.<br></li><li>We’ll provide up to $2,500 in funding for your learning and growth through our Unleash program, which provides opportunities to unleash your potential through initiatives that help you grow as a developer and explore your passions more each day.&nbsp;</li></ul><div><br></div><div><b>Who is X-Team meant for?</b></div><div><br></div><div>A potential X-Teamer is a freelance developer with experience working on large-scale, remote teams and projects. They are self-motivated, proactive, and have a strong team spirit. If you're tired of the traditional freelancing platforms, you'll be happy to hear that we’re so much more. X-Team is a community of like-minded individuals, carefully chosen to ensure that they can become part of the community of the most motivated people in the world who come together to unleash their potential. What we've created is truly special and not merely a faceless platform. X-Team is where developers go to feel truly at home together while becoming more motivated than they've ever been.</div><div><br></div><div><b>How long does your vetting/interview process take?</b></div><div><br></div><div>It varies depending on our immediate needs and how quickly you respond to our questions and requests. On average, it takes 1-3 weeks.</div><div><br></div><div>More importantly though, after a decade of interviewing developers, we've learned how important it is to respect people's time. We will only ever ask for more of your time if we think you are a potentially good fit, rather than waste your time having you jump through unnecessary hoops.</div>            </div><div>How to apply:<br><a href='https://x-team.com/remote-ios-developer-jobs/?utm_sourceWhereverJobs&amp;utm_medium=board' rel='nofollow'>x-team.com/remote-ios-developer-jobs/</a></div>"
+  },
+  {
     "id": "P4ZWZdEqSbutZkgXxjSHKg",
     "url": "https://weworkremotely.com/remote-jobs/x-team-ios-developer-1",
     "title": "X-Team: iOS Developer",
