--- a/assets/data/TITLE1_unknown.json
+++ b/assets/data/TITLE1_unknown.json
@@ -1,6 +1,42 @@
 {
  "items": [
   {
+    "id": "0C22xvwaQzivEOFNz5fIWQ",
+    "url": "https://feeds.feedblitz.com/~/558541596/0/problogger/jobs~Friendly-Blogger-in-the-Outdoors-Camping-amp-Hiking-Niche/",
+    "title": "Friendly Blogger in the Outdoors (Camping & Hiking) Niche",
+    "tags": [
+      "DBG:surround``remot 3N ( OR(employe,develop,engin,team,role,employment,workmat) OR compani OR worldwide)",
+      "DBG_TECH1:k/t/w:computer-vision/bigdata-ml/8",
+      "DBG_TECH1:techWeightMap:{python=0, other=0, dotnet=0, c=0, mobile=0, go=0, nodejs=0, bigdata-ml=8, ruby=0, apple=0, java=0, gamedev=0, php=0, embedded=0, frontend=0}",
+      "REMOTE1/100",
+      "TECH1/bigdata-ml",
+      "TITLE1/unknown",
+      "TZ/unknown"
+    ],
+    "tagsNames1": [
+      "undefined job title"
+    ],
+    "tagsNames2": [
+      "bigdata-ml"
+    ],
+    "hiringOrganization": {
+      "name": "UNSET",
+      "sameAs": "UNSET"
+    },
+    "salary": {
+      "currency": "UNSET",
+      "minValue": 0,
+      "maxValue": 0,
+      "info": "",
+      "unit": "UNSET",
+      "isEquity": false
+    },
+    "employmentType": "UNSET",
+    "published": "Jul 15, 2018 3:00:00 AM",
+    "validThrough": "Jan 1, 1970 3:00:00 AM",
+    "content": "<h2>Friendly Blogger in the Outdoors (Camping &amp; Hiking) Niche</h2><div>Company: TakeOutdoors</div>Location: Remote work<br>Job Type: Freelance<div>  <h4>Description</h4>  <div>                    <p><span>How’s it going?</span></p><p><span>I’m going to have this JD with a conversational tone so you can better expect what’s it like to work for me. </span></p><p><span>I’m looking for a freelance writer who camps or hikes every now and then. To help others out there, you will be expected to compile camping/hiking related information and knowledge into entertainingly digestible articles. In the process, you can expect to gain knowledge and vastly improving your next outdoors trip. (And I’m also a fun person to work with :D)</span></p><p><span>What you should have:</span></p><ul><li><span>Writing on this topic professionally for at least 3 years and is able to create articles monthly.</span></li><li><span>To have English as your native language and able to write in a conversational style where it'll be engaging to readers.</span></li><li><span>A journalist mindset, anything you write should have references or have experienced personally. Also good to seek other experts’ opinions and credit them.</span></li></ul><p><span>Having published on similar sites such as REI, ReserveAmerica, OutsideOnline, Backpacker and KOA is an excellent plus point.</span></p><p><span>The selected candidate would be expected to perform the following:</span></p><ul><li><span>Do research (Yes because I don’t like #fakenews ;), you will be expected to provide references. Of course, personal experience is good as well)</span></li><li><span>Write at least 1 long article per month on my <a href='https://takeoutdoors.com/' rel='nofollow'>outdoors blog</a>. (To make your life easier, I can provide the topics and outlines. I would be delighted if you can give suggestions!).</span></li><li><span>Occasionally helping out with other website content.</span></li></ul><p><span>Does this sound interesting to you? If it does, I look forward to you sharing the following items for my consideration of your application to this role:</span></p><ol><li><span>Your CV, blog, portfolio</span></li><li><span>Links to your published articles or any other similar content.</span></li><li><span>Your expected rates </span></li><li><span>Your weekly availability</span></li></ol><p><span>In the subject of your email, indicate “Take me in or regret!”.</span></p><p><span>In the first line of your email, indicate “I enjoyed reading your job description and I want to try it out!”.</span></p><p><span>So what are you waiting for?</span></p>          </div>          </div>"
+  },
+  {
     "id": "gGLN0PNoRZO_sbaCsrKSDQ",
     "url": "https://jobspresso.co/job/javascript-development-instructor/",
     "title": "JavaScript Development Instructor",
