--- a/_config.yml
+++ b/_config.yml
@@ -24,7 +24,7 @@ markdown: kramdown
 
 # Themes are encouraged to use these universal variables
 # so be sure to set them if your theme uses them.
-title : meta<strong>job</strong>
+title : <strong>remote</strong>4me
 tagline: all remote jobs in one place
 author :
   name : Dmitri Geller
@@ -42,7 +42,7 @@ author :
 # Else if you are pushing to username.github.io, replace with your username.
 # Finally if you are pushing to a GitHub project page, include the project name at the end.
 #
-production_url : http://metajob.org
+production_url : http://remote4me.com/
 
 plugins:
   - jekyll-sitemap
